<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="395dp"
    android:layout_height="0dp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout">



        <TextView
            android:text="@string/maintenance_request_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_machine"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="normal|bold"
            android:textSize="24sp" />

        <TextView
            android:text="@string/failure_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_failure_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_machine"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/spn_failure_type"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.71"
            app:layout_constraintTop_toBottomOf="@+id/tv_failure_type"
            android:entries="@array/arr_failure_type"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/equipment_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_equipment_available"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_failure_type"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/spn_equipment_available"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_equipment_available"
            android:layout_marginTop="8dp"
            android:entries="@array/arr_equipment_available" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_breakdown"
            android:hint="@string/breakdown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_equipment_available"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_breakdown"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:text="@string/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:drawableEnd="@drawable/ic_send_white"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description"
            android:layout_marginTop="8dp" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>